--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <li><a href="#footer">CONTACT</a></li>
             </ul>
         </div>
+        <div class="menu-bar">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </nav>
     <div class="hero-section">
         <div class="left">
